--- a/host_vars/leihs-v4.yml
+++ b/host_vars/leihs-v4.yml
@@ -1,4 +1,4 @@
-ansible_host: leihs-v4-test.zhdk.ch
+ansible_host: leihs-v4.zhdk.ch
 ansible_user: root
 
 ssh_keys_present:
@@ -6,4 +6,5 @@ ssh_keys_present:
   - "{{lookup('file', inventory_dir + '/ssh_keys/mfa')}}"
   - "{{lookup('file', inventory_dir + '/ssh_keys/nimaai')}}"
 
-database_dump_restore_file_path: '{{inventory_dir}}/secrets/db_production.pgbin'
+ci_vim_mode: yes
+
