--- a/host_vars/leihs-v4-test.yml
+++ b/host_vars/leihs-v4-test.yml
@@ -5,6 +5,7 @@ ssh_keys_present:
   - "{{lookup('file', inventory_dir + '/ssh_keys/drtom')}}"
   - "{{lookup('file', inventory_dir + '/ssh_keys/mfa')}}"
   - "{{lookup('file', inventory_dir + '/ssh_keys/nimaai')}}"
+  - "{{lookup('file', inventory_dir + '/ssh_keys/zhdk_ci_executor')}}"
 
 database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
 
