Adjust hostname of v3 prod

--- a/host_vars/leihs-v3-prod.yml
+++ b/host_vars/leihs-v3-prod.yml
@@ -1,4 +1,4 @@
-ansible_host: leihs.zhdk.ch
+ansible_host: rails.zhdk.ch
 ansible_user: root
 leihs_v3_root_dir: /home/leihs/production/current
 leihs_v3_ruby_dir: /home/leihs/.rbenv/versions/2.3.0
