--- a/host_vars/leihs-v4-prod.yml
+++ b/host_vars/leihs-v4-prod.yml
@@ -1,6 +1,7 @@
 ansible_host: leihs-v4-prod.zhdk.ch
 ansible_user: root
 
+leihs_send_mails: Yes
 db_backup_on_deploy: Yes
 db_backup_keep_days: 4
 db_backup_nigthly_enabled: Yes
