--- a/host_vars/zhdk-leihs-prod.yml
+++ b/host_vars/zhdk-leihs-prod.yml
@@ -14,5 +14,6 @@ ssh_keys_present:
 
 database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
 
-ci_vim_mode: yes
+zhdk_agw_info_file_path: '{{inventory_dir}}/../legacy/secrets/agw_info_prod.rb'
 
+ci_vim_mode: yes
