--- a/host_vars/zhdk-leihs-staging.yml
+++ b/host_vars/zhdk-leihs-staging.yml
@@ -1,9 +1,9 @@
 ansible_host: zhdk-leihs-staging.ruby.zhdk.ch
 ansible_user: root
 
-db_backup_nigthly_enabled: Yes
-db_backup_keep_days: 2
-db_backup_on_deploy: Yes
+db_backup_nigthly_enabled: No
+db_backup_on_deploy: No
+db_backup_keep_days: 1
 
 ssh_keys_present:
   - "{{lookup('file', inventory_dir + '/ssh_keys/drtom')}}"
