--- a/host_vars/ffzh-leihs-staging.yml
+++ b/host_vars/ffzh-leihs-staging.yml
@@ -11,4 +11,6 @@ database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.
 
 ci_vim_mode: yes
 
-settings_external_base_url: "https://ffzh-staging.leihs.zhdk.ch"
+settings:
+  - name: external_base_url
+    value: "https://ffzh-staging.leihs.zhdk.ch"
