--- a/host_vars/zhdk-leihs-prod.yml
+++ b/host_vars/zhdk-leihs-prod.yml
@@ -17,3 +17,5 @@ database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.
 zhdk_agw_info_file_path: '{{inventory_dir}}/../legacy/secrets/agw_info_prod.rb'
 
 ci_vim_mode: yes
+
+settings_file_path: '{{inventory_dir}}/settings/zhdk-leihs-prod.yml'
