Setup tom server for sync deploy

--- a/host_vars/tom.yml
+++ b/host_vars/tom.yml
@@ -1,3 +1,4 @@
 ansible_host: tom.ruby.zhdk.ch
 settings_file_path: '{{inventory_dir}}/settings/tom.yml'
 shibboleth_sign_in_enabled: Yes
+leihs_master_secret: '{{zhdk_dev_master_secret}}'
