--- a/host_vars/tom.yml
+++ b/host_vars/tom.yml
@@ -5,3 +5,6 @@ leihs_master_secret: '{{zhdk_dev_master_secret}}'
 
 manipulate_data_reset_all_login_fields: true
 manipulate_data_revoke_all_admins: true
+
+reverse_proxy_custom_config: |
+  ProxyPass /zhdk-agw     http://localhost:3333/zhdk-agw	  nocanon retry=0
