--- a/host_vars/zhdk-leihs-prod-v5.yml
+++ b/host_vars/zhdk-leihs-prod-v5.yml
@@ -24,7 +24,7 @@ leihs_master_secret: '{{zhdk_prod_master_secret}}'
 
 settings_file_path: '{{inventory_dir}}/settings/zhdk-leihs-prod.yml'
 
-leihs_send_mails: Yes
+leihs_send_mails: No
 
 database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
 # db_backup_on_deploy: No
@@ -40,4 +40,3 @@ agw_auth_my_public_key: '{{zhdk_prod_agw_auth_my_public_key}}'
 agw_auth_leihs_public_key: '{{agw_auth_my_public_key}}'
 agw_app_id: '{{zhdk_prod_agw_app_id}}'
 agw_app_secret: '{{zhdk_prod_agw_app_secret}}'
-
