--- a/host_vars/zhdk-leihs-prod-v5.yml
+++ b/host_vars/zhdk-leihs-prod-v5.yml
@@ -7,14 +7,10 @@ ssh_keys_present:
   - "{{lookup('file', inventory_dir + '/ssh_keys/nimaai')}}"
   - "{{lookup('file', inventory_dir + '/ssh_keys/zhdk_ci_executor')}}"
 
-# THIS NOT THE FIRST TIME
-# database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
-# db_backup_on_deploy: Yes
 
-# ONLY THE FIRST TIME
-manipulate_data_reset_all_login_fields: true
-manipulate_data_revoke_all_admins: true
-db_backup_on_deploy: No
+database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
+db_backup_on_deploy: Yes
+leihs_send_mails: Yes
 
 # LEIHS SETTINGS
 reverse_proxy_custom_config: |
@@ -24,10 +20,7 @@ leihs_master_secret: '{{zhdk_prod_master_secret}}'
 
 settings_file_path: '{{inventory_dir}}/settings/zhdk-leihs-prod.yml'
 
-leihs_send_mails: No
-
 database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
-# db_backup_on_deploy: No
 db_backup_keep_days: 4
 db_backup_nigthly_enabled: Yes
 
