--- a/host_vars/zhdk-leihs-test.yml
+++ b/host_vars/zhdk-leihs-test.yml
@@ -18,3 +18,17 @@ zhdk_agw_info_file_path: '{{inventory_dir}}/../legacy/secrets/agw_info_test.rb'
 ci_vim_mode: yes
 
 settings_file_path: '{{inventory_dir}}/settings/zhdk-leihs-test.yml'
+
+
+# AGW
+
+reverse_proxy_custom_config: |
+  ProxyPass /zhdk-agw     http://localhost:3333/zhdk-agw	  nocanon retry=0
+
+agw_auth_external_base_url: https://test.leihs.zhdk.ch
+agw_auth_port: 3333
+agw_auth_my_private_key: '{{zhdk_test_agw_auth_my_private_key}}'
+agw_auth_my_public_key: '{{zhdk_test_agw_auth_my_public_key}}'
+agw_auth_leihs_public_key: '{{agw_auth_my_public_key}}'
+agw_app_id: '{{zhdk_test_agw_app_id}}'
+agw_app_secret: '{{zhdk_test_agw_app_secret}}'
