--- a/group_vars/developers.yml
+++ b/group_vars/developers.yml
@@ -1,3 +1,4 @@
 ansible_user: root
 database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
 zhdk_agw_info_file_path: '{{inventory_dir}}/../legacy/secrets/agw_info_test.rb'
+#ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q root@ci.zhdk.ch"'
