--- a/host_vars/zhdk-leihs-staging.yml
+++ b/host_vars/zhdk-leihs-staging.yml
@@ -28,8 +28,8 @@ reverse_proxy_custom_config: |
 
 agw_auth_external_base_url: https://staging.leihs.zhdk.ch
 agw_auth_port: 3333
-agw_auth_my_private_key: '{{zhdk_staging_agw_auth_my_private_key}}'
-agw_auth_my_public_key: '{{zhdk_staging_agw_auth_my_public_key}}'
-agw_auth_leihs_public_key: '{{agw_auth_my_public_key}}'
+agw_auth_private_key: '{{auth_system_master_private_key}}'
+agw_auth_public_key: '{{auth_system_master_public_key}}'
+agw_auth_leihs_public_key: '{{auth_system_master_public_key}}'
 agw_app_id: '{{zhdk_staging_agw_app_id}}'
 agw_app_secret: '{{zhdk_staging_agw_app_secret}}'
