--- a/host_vars/v51-test.yml
+++ b/host_vars/v51-test.yml
@@ -4,6 +4,7 @@ ansible_user: root
 settings_file_path: '{{inventory_dir}}/settings/v51-test.yml'
 shibboleth_sign_in_enabled: no
 leihs_master_secret: '{{zhdk_dev_master_secret}}'
+database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
 
 ssh_keys_present:
   - "{{lookup('file', inventory_dir + '/ssh_keys/drtom')}}"
