add config for ffzh-prod

--- a/settings/ffzh-leihs-prod.yml
+++ b/settings/ffzh-leihs-prod.yml
@@ -1,2 +1,3 @@
-external_base_url: "https://ffzh.leihs.zhdk.ch"
-smtp_default_from_address: "noreply@zhdk.ch"
+external_base_url: "https://leihs.ffzh.ch"
+smtp_sender_address: "leihs@ffzh.ch"
+smtp_default_from_address: "leihs@ffzh.ch"
