--- a/host_vars/tom.yml
+++ b/host_vars/tom.yml
@@ -6,5 +6,13 @@ leihs_master_secret: '{{zhdk_dev_master_secret}}'
 manipulate_data_reset_all_login_fields: true
 manipulate_data_revoke_all_admins: true
 
+# AGW
 reverse_proxy_custom_config: |
   ProxyPass /zhdk-agw     http://localhost:3333/zhdk-agw	  nocanon retry=0
+agw_auth_external_base_url: https://tom.ruby.zhdk.ch
+agw_auth_port: 3333
+agw_auth_private_key: '{{auth_system_master_private_key}}'
+agw_auth_public_key: '{{auth_system_master_public_key}}'
+agw_auth_leihs_public_key: '{{auth_system_master_public_key}}'
+agw_app_id: '{{zhdk_staging_agw_app_id}}'
+agw_app_secret: '{{zhdk_staging_agw_app_secret}}'
