--- a/host_vars/zhdk-leihs-staging.yml
+++ b/host_vars/zhdk-leihs-staging.yml
@@ -21,6 +21,8 @@ ci_vim_mode: yes
 
 settings_file_path: '{{inventory_dir}}/settings/zhdk-leihs-staging.yml'
 
+LEIHS_DEPLOY_NEW_BORROW_APP: yes
+
 # AGW
 
 reverse_proxy_custom_config: |
