--- a/host_vars/nimaai.yml
+++ b/host_vars/nimaai.yml
@@ -1,3 +1,5 @@
+leihs_external_hostname: nimaai.ruby.zhdk.ch
+
 ansible_host: nimaai.ruby.zhdk.ch
 settings_file_path: '{{inventory_dir}}/settings/nimaai.yml'
 ci_vim_mode: yes
