--- a/host_vars/tom.yml
+++ b/host_vars/tom.yml
@@ -1,3 +1,5 @@
+leihs_external_hostname: tom.ruby.zhdk.ch
+
 ansible_host: tom.ruby.zhdk.ch
 settings_file_path: '{{inventory_dir}}/settings/tom.yml'
 shibboleth_sign_in_enabled: Yes
