--- a/host_vars/vmware.yml
+++ b/host_vars/vmware.yml
@@ -1,4 +1,7 @@
-ansible_host: 192.168.75.128
+leihs_external_hostname: 192.168.75.128
+leihs_external_base_url: "http://{{leihs_external_hostname}}"
+
+ansible_host: "{{leihs_external_hostname}}"
 ansible_user: root
 
 ssh_keys_present:
