--- a/host_vars/zhdk-leihs-prod-v5.yml
+++ b/host_vars/zhdk-leihs-prod-v5.yml
@@ -1,3 +1,5 @@
+leihs_external_hostname: leihs.zhdk.ch
+
 ansible_host: zhdk-leihs-prod-v5.ruby.zhdk.ch
 ansible_user: root
 
@@ -22,7 +24,7 @@ db_backup_nigthly_enabled: Yes
 
 
 # AGW
- 
+
 reverse_proxy_custom_config: |
   ProxyPass /zhdk-agw     http://localhost:3333/zhdk-agw	  nocanon retry=0
 
