--- a/host_vars/ffzh-leihs-staging.yml
+++ b/host_vars/ffzh-leihs-staging.yml
@@ -15,6 +15,4 @@ ci_vim_mode: yes
 
 settings_file_path: '{{inventory_dir}}/settings/ffzh-leihs-staging.yml'
 
-# NOTE: this won't send mails to customers! the server itself
-#       is configured to transparently redirect mails to a dummy mailbox!
-leihs_send_mails: Yes
+leihs_send_mails: No
