dev servers: TLS config

--- a/host_vars/tom.yml
+++ b/host_vars/tom.yml
@@ -1,4 +1,4 @@
-leihs_external_hostname: tom.ruby.zhdk.ch
+leihs_external_hostname: tom.dev.leihs.app
 
 ansible_host: tom.ruby.zhdk.ch
 settings_file_path: '{{inventory_dir}}/settings/tom.yml'
@@ -7,6 +7,17 @@ leihs_master_secret: '{{zhdk_dev_master_secret}}'
 
 manipulate_data_reset_all_login_fields: true
 manipulate_data_revoke_all_admins: true
+
+leihs_virtual_hosts:
+  - hostname: 'localhost'
+    ip: 'localhost'
+    logfile_infix: 'localhost'
+    force_redirect_to_https: no
+  - hostname: '{{leihs_external_hostname}}'
+    ip: '*'
+    ssl_certificate_file: '/etc/letsencrypt/live/{{leihs_external_hostname}}/fullchain.pem'
+    ssl_certificate_key_file: '/etc/letsencrypt/live/{{leihs_external_hostname}}/privkey.pem'
+    force_redirect_to_https: yes
 
 # AGW
 reverse_proxy_custom_config: |
