--- a/host_vars/nimaai.yml
+++ b/host_vars/nimaai.yml
@@ -1,20 +1,9 @@
-leihs_external_hostname: nimaai.dev.leihs.app
+leihs_external_hostname: nimaai.ruby.zhdk.ch
 
 ansible_host: nimaai.ruby.zhdk.ch
 ci_vim_mode: yes
 
 LEIHS_DEPLOY_NEW_BORROW_APP: yes
-
-leihs_virtual_hosts:
-  - hostname: 'localhost'
-    ip: 'localhost'
-    logfile_infix: 'localhost'
-    force_redirect_to_https: no
-  - hostname: '{{leihs_external_hostname}}'
-    ip: '*'
-    ssl_certificate_file: '/etc/letsencrypt/live/{{leihs_external_hostname}}/fullchain.pem'
-    ssl_certificate_key_file: '/etc/letsencrypt/live/{{leihs_external_hostname}}/privkey.pem'
-    force_redirect_to_https: yes
 
 # AGW
 reverse_proxy_custom_config: |
