--- a/host_vars/zhdk-leihs-staging.yml
+++ b/host_vars/zhdk-leihs-staging.yml
@@ -12,11 +12,7 @@ db_backup_keep_days: 1
 #       is configured to transparently redirect mails to a dummy mailbox!
 leihs_send_mails: Yes
 
-ssh_keys_present:
-  - "{{lookup('file', inventory_dir + '/ssh_keys/drtom')}}"
-  - "{{lookup('file', inventory_dir + '/ssh_keys/mfa')}}"
-  - "{{lookup('file', inventory_dir + '/ssh_keys/nimaai')}}"
-  - "{{lookup('file', inventory_dir + '/ssh_keys/zhdk_ci_executor')}}"
+ssh_keys_present: []
 
 database_dump_restore_file_path: '{{inventory_dir}}/../legacy/tmp/db_production.pgbin'
 
