--- a/host_vars/zhdk-leihs-staging.yml
+++ b/host_vars/zhdk-leihs-staging.yml
@@ -35,3 +35,6 @@ agw_auth_public_key: '{{auth_system_master_public_key}}'
 agw_auth_leihs_public_key: '{{auth_system_master_public_key}}'
 agw_app_id: '{{zhdk_staging_agw_app_id}}'
 agw_app_secret: '{{zhdk_staging_agw_app_secret}}'
+
+zhdkaad_client_id: b26f2d22-1709-4b12-98b8-6802314f3dc1
+
