--- a/cider-ci/task-components/restore.yml
+++ b/cider-ci/task-components/restore.yml
@@ -1,6 +1,3 @@
-environment_variables:
-  STATUS_PAGE_URL: "https://ci.zhdk.ch/cider-ci/ui/workspace/trials/{{CIDER_CI_TRIAL_ID}}"
-
 scripts:
   restore-dump:
     start_when:
@@ -22,6 +19,5 @@ scripts:
 
   deploy:
     timeout: 5 hours
-    include: cider-ci/task-components/zhdk-test-deploy-script.yml
     start_when:
-      data from prod was synced: { script_key: restore-dump, states: [passed] }
+      data-restored: { script_key: restore-dump, states: [passed] }
