Fix external_hostname for dev hosts

--- a/hosts.yml
+++ b/hosts.yml
@@ -56,7 +56,7 @@ dev:
 
   vars:
     ansible_host: '{{inventory_hostname}}-leihs.ruby.zhdk.ch'
-    leihs_external_hostname: '{{inventory_hostname}}-leihs.rubydev.zhdk.ch'
+    leihs_external_hostname: '{{inventory_hostname}}.leihs.rubydev.zhdk.ch'
 
 ### groupings #################################################################
 
