--- a/cider-ci/job-components/deploy.yml
+++ b/cider-ci/job-components/deploy.yml
@@ -77,6 +77,7 @@ context:
           exclusive_executor_resource: leihs-build
           body: |
             #!/usr/bin/env bash
+            echo ">o> zhdk deploy.yml"
             set -euo pipefail
             cd $DEPLOY_DIR
             ./bin/build
