--- a/hosts.yml
+++ b/hosts.yml
@@ -14,6 +14,7 @@ staging:
 
   vars:
     leihs_send_mails: Yes
+    publish_inventory: True
 
 
 ### test ######################################################################
@@ -40,6 +41,7 @@ test:
 
   vars:
     leihs_send_mails: Yes
+    publish_inventory: True
 
 
 ### dev #######################################################################
@@ -57,6 +59,7 @@ dev:
   vars:
     ansible_host: '{{inventory_hostname}}-leihs.ruby.zhdk.ch'
     leihs_external_hostname: '{{inventory_hostname}}.leihs.rubydev.zhdk.ch'
+    publish_inventory: True
 
 ### groupings #################################################################
 
@@ -90,6 +93,7 @@ leihs_server:
     ansible_user: root
     reverse_proxy_use_x_forwarded_for: true
     remote_pgbin_restore_path: /leihs/var/db-backups/latest.pgbin
+    publish_inventory: False
 
     leihs_virtual_hosts:
     - hostname: '{{leihs_external_hostname}}'
