--- a/hosts.yml
+++ b/hosts.yml
@@ -78,6 +78,14 @@ zhdk:
     staging:
     test:
 
+non_prod:
+  children:
+    dev:
+  hosts:
+    staging:
+    test:
+    test-blank:
+
 zhdk_secrets:
   children:
     dev:
