add missing flag

--- a/hosts.yml
+++ b/hosts.yml
@@ -101,6 +101,7 @@ leihs_server:
     ansible_user: root
     reverse_proxy_use_x_forwarded_for: true
     remote_pgbin_restore_path: /leihs/var/db-backups/latest.pgbin
+    publish_inventory: False
 
     leihs_virtual_hosts:
     - hostname: '{{leihs_external_hostname}}'
