--- a/hosts.yml
+++ b/hosts.yml
@@ -59,7 +59,7 @@ dev:
   vars:
     ansible_host: '{{inventory_hostname}}-leihs.ruby.zhdk.ch'
     leihs_external_hostname: '{{inventory_hostname}}.leihs.rubydev.zhdk.ch'
-    publish_inventory: False
+    publish_inventory: True
 
 ### groupings #################################################################
 
