--- a/hosts.yml
+++ b/hosts.yml
@@ -59,7 +59,7 @@ dev:
   vars:
     ansible_host: '{{inventory_hostname}}-leihs.ruby.zhdk.ch'
     leihs_external_hostname: '{{inventory_hostname}}.leihs.rubydev.zhdk.ch'
-    publish_inventory: True
+    publish_inventory: False
 
 ### groupings #################################################################
 
@@ -81,13 +81,13 @@ zhdk:
     staging:
     test:
 
-non_prod:
-  children:
-    dev:
-  hosts:
-    staging:
-    test:
-#    test-blank:
+#non_prod:
+#  children:
+#    dev:
+#  hosts:
+#    staging:
+#    test:
+##    test-blank:
 
 zhdk_secrets:
   children:
