--- a/hosts.yml
+++ b/hosts.yml
@@ -59,7 +59,7 @@ dev:
   vars:
     ansible_host: '{{inventory_hostname}}-leihs.ruby.zhdk.ch'
     leihs_external_hostname: '{{inventory_hostname}}.leihs.rubydev.zhdk.ch'
-    publish_inventory: False
+    publish_inventory: True
 
 ### groupings #################################################################
 
@@ -74,20 +74,11 @@ restricted:
       ZHdK-Leihs-Team: "{{zhdk_leihs_team_basic_auth_password}}"
       Leihs: "{{zhdk_leihs_team_basic_auth_password}}"
 
-
 zhdk:
   children:
     dev:
     staging:
     test:
-
-#non_prod:
-#  children:
-#    dev:
-#  hosts:
-#    staging:
-#    test:
-##    test-blank:
 
 zhdk_secrets:
   children:
