test db backup and restore setup

--- a/cider-ci/jobs/deploy-to-test.yml
+++ b/cider-ci/jobs/deploy-to-test.yml
@@ -6,6 +6,12 @@ jobs:
   test-restore-deploy:
     name: Restore prod data and deploy to test
     include: cider-ci/job-components/deploy.yml
+    run_when: &RUN_ON_MASTER_AND_DO_NIGHTLY_RESET
+      "deploy at 4:30 UTC":
+        type: cron
+        value: "30 4 * * *"
+        branch_include_match: ^master$
+        rerun: true
     context:
       task_defaults:
         exclusive_global_resources:
