--- a/hosts.yml
+++ b/hosts.yml
@@ -42,6 +42,7 @@ test:
   vars:
     leihs_send_mails: Yes
     publish_inventory: True
+    db_backup_nightly_enabled: No
 
 
 ### dev #######################################################################
